[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Progress_Bars.gd" type="Script" id=1]

[node name="Progress_Bars" type="Node2D" groups=[
"Tools",
]]
z_index = 100
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 260.0
margin_bottom = 20.0
color = Color( 0.313726, 0.313726, 0.313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_top = 30.0
margin_right = 260.0
margin_bottom = 40.0
color = Color( 0.156863, 0.156863, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 85.0
margin_bottom = 19.0
text = "Progress Bar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="."]
margin_left = 240.0
margin_right = 260.0
margin_bottom = 20.0
text = "x"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hide" type="Button" parent="."]
margin_left = 220.0
margin_right = 240.0
margin_bottom = 20.0
text = "_"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move" type="Button" parent="."]
margin_right = 220.0
margin_bottom = 20.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 30.0
margin_top = 20.0
margin_right = 230.0
margin_bottom = 50.0
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Decrease" type="Button" parent="."]
margin_top = 20.0
margin_right = 30.0
margin_bottom = 50.0
text = "<"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Increase" type="Button" parent="."]
margin_left = 230.0
margin_top = 20.0
margin_right = 260.0
margin_bottom = 50.0
text = ">"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="Hide" to="." method="_on_Hide_pressed"]
[connection signal="button_down" from="Move" to="." method="_on_Move_button_down"]
[connection signal="button_up" from="Move" to="." method="_on_Move_button_up"]
[connection signal="button_down" from="Decrease" to="." method="_on_Decrease_button_down"]
[connection signal="button_up" from="Decrease" to="." method="_on_Decrease_button_up"]
[connection signal="button_down" from="Increase" to="." method="_on_Increase_button_down"]
[connection signal="button_up" from="Increase" to="." method="_on_Increase_button_up"]
